--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "main": "index.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "start": "node index"
+        "start": "node ."
     },
     "keywords": [
         "rpi"
@@ -18,11 +18,13 @@
         "express": "^4.15.2",
         "express-session": "^1.15.2",
         "mongoose": "^4.9.7",
+        "passport": "^0.3.2",
         "passport-oauth2": "^1.4.0",
         "passport-oauth2-middleware": "^1.0.2",
         "passport-local": "^1.0.0",
         "pug": "^2.0.0-beta.12",
         "mysql": "^2.13.0",
-        "socket.io": "^1.7.3"
+        "socket.io": "^1.7.3",
+        "jwt-simple": "^0.5.1"
     }
 }
