--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "main": "index.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "start": "node . && cd views && ng serve"
+        "start": "cd views && ng serve && cd .. && node ."
     },
     "keywords": [
         "rpi"
