--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "mysql": "^2.13.0",
         "socket.io": "^1.7.3",
         "jwt-simple": "^0.5.1",
-        "python-shell": "^0.4.0"
+        "python-shell": "^0.4.0",
+        "connect-redis": "^3.3.0"
     }
 }
