--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "main": "index.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "start": "cd views && ng serve && cd .. && node ."
+        "prestart": "node checkDb.js",
+        "start": "node ."
     },
     "keywords": [
         "rpi"
@@ -27,6 +28,8 @@
         "socket.io": "^1.7.3",
         "jwt-simple": "^0.5.1",
         "python-shell": "^0.4.0",
-        "connect-redis": "^3.3.0"
+        "connect-redis": "^3.3.0",
+        "multer": "^1.3.0",
+        "node-uuid-generator": "^1.0.0"
     }
 }
