--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
         "python-shell": "^0.4.0",
         "connect-redis": "^3.3.0",
         "multer": "^1.3.0",
-        "node-uuid-generator": "^1.0.0"
+        "node-uuid-generator": "^1.0.0",
+        "email-verification": "^0.4.6",
+        "nodemailer": "^4.0.1"
     }
 }
