--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "mongoose": "^4.9.7",
         "passport": "^0.3.2",
         "passport-oauth2": "^1.4.0",
+        "passport-jwt": "^2.2.1",
         "passport-oauth2-middleware": "^1.0.2",
         "passport-local": "^1.0.0",
         "pug": "^2.0.0-beta.12",
@@ -34,6 +35,7 @@
         "email-verification": "^0.4.6",
         "nodemailer": "^4.0.1",
         "push-notify": "^1.1.1",
-        "typescript": "^2.3.2"
+        "typescript": "^2.3.2",
+        "morgan": "^1.8.1"
     }
 }
