--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
         "nodemailer": "^4.0.1",
         "push-notify": "^1.1.1",
         "typescript": "^2.3.2",
-        "morgan": "^1.8.1"
+        "morgan": "^1.8.1",
+        "connect-ensure-login": "^0.1.1"
     }
 }
